--- a/heis_frontend/package.json
+++ b/heis_frontend/package.json
@@ -19,8 +19,10 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.4",
+    "bootstrap": "^5.3.6",
     "bulma": "^1.0.4",
     "react": "^19.1.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.4.1",
     "react-scripts": "5.0.1",
